--- a/src/components/Chat/MessagesList/MessagesList.css
+++ b/src/components/Chat/MessagesList/MessagesList.css
@@ -4,8 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  max-height: 85vh;
-  min-height: 719px;
+  height: 910px;
 }
 .messages-list::before {
   z-index: 90;
@@ -23,7 +22,7 @@
 .messages-list-messages {
   display: flex;
   flex-direction: column-reverse;
-  min-height: 680px;
+  height: 680px;
   overflow-x: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -46,6 +45,7 @@
   font-size: 18px;
   color: white;
   width: 727px;
+  align-self: flex-end;
 }
 .messages-list-send-message-input {
   color: white;
@@ -94,10 +94,7 @@
   }
   .messages {
     min-height: 0px;
-    height: 400px;
-  }
-  .messages-list-messages {
-    height: 100%;
+    height: 50vh;
   }
 }
 @media (max-width: 750px) {
@@ -107,14 +104,9 @@
     margin-bottom: 10px;
     width: 500px;
   }
-  .messages-list-messages {
-    max-height: 400px;
-  }
 }
 @media (max-width: 510px) {
-  .messages {
-    height: 220px;
-  }
+
   .messages-list-send-message-input {
     font-size: 14px;
   }
